Fix uah_sso #username color to make visible when typing

--- a/uah_sso.css
+++ b/uah_sso.css
@@ -51,7 +51,7 @@ input, .form-field {
     color: #bababa;
 }
 
-input:focus, .form-field:focus {
+input:focus, .form-field:focus, #username:focus {
     color: #e6e6e6;
 }
 
